--- a/docs/components/form/cascadeSelectField.mdx
+++ b/docs/components/form/cascadeSelectField.mdx
@@ -31,9 +31,9 @@ import AttrTable from 'components/AttrTable';
     },
     {
       attr: '值',
-      code: 'fieldData',
-      type: 'Object',
-      demo: '4121',
+      code: 'value',
+      type: 'String',
+      demo: '"4121"',
       dafault: '',
       desc: '',
     },
@@ -49,7 +49,7 @@ import AttrTable from 'components/AttrTable';
       attr: '标题宽度',
       code: 'labelColSpan',
       type: 'Number',
-      demo: '',
+      demo: '4',
       dafault: '',
       desc: '',
     },
@@ -57,7 +57,7 @@ import AttrTable from 'components/AttrTable';
       attr: '标题偏移',
       code: 'labelColOffset',
       type: 'Number',
-      demo: 'true',
+      demo: '0',
       dafault: '',
       desc: '',
     },
@@ -89,7 +89,7 @@ import AttrTable from 'components/AttrTable';
       attr: '描述信息',
       code: 'tips',
       type: 'String',
-      demo: '这是一段描述信息',
+      demo: '"这是一段描述信息"',
       dafault: '',
       desc: '',
     },
@@ -97,9 +97,9 @@ import AttrTable from 'components/AttrTable';
       attr: '状态',
       code: 'behavior',
       type: 'String',
-      demo: '{fieldBehavior: "NORMAL"}',
+      demo: '"NORMAL"',
       dafault: '',
-      desc: 'fieldBehavior 可选值："NORMAL", "DISABLED", "READONLY", "HIDDEN"',
+      desc: '可选值："NORMAL", "DISABLED", "READONLY", "HIDDEN"',
     },
     {
       attr: '尺寸',
